--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="padding_extra_large">32dp</dimen>
 
     <dimen name="title_large">32dp</dimen>
+    <dimen name="title_extra_large">42dp</dimen>
+    <dimen name="text_large">24dp</dimen>
 </resources>
